--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,10 @@
 Package: inshiny
 Type: Package
-Title: Compact Inline Widgets for 'Shiny' Apps
+Title: Compact Inline Widgets for 'shiny' Apps
 Version: 0.1.0
-Authors@R: c(
-    person(
-      "Nick", "Davies",
-      email = "nicholas.davies@lshtm.ac.uk",
-      role = c("aut", "cre")
-    )
-  )
-Description: Provides a basic set of compact widgets for Shiny apps which 
-    occupy minimum space and appear "inline" with explanatory text.
+Authors@R: person("Nick", "Davies", email = "nicholas.davies@lshtm.ac.uk", role = c("aut", "cre"))
+Description: Provides a basic set of compact widgets for 'shiny' apps which
+ occupy less space and can appear inline with surrounding text.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -19,14 +13,14 @@ RoxygenNote: 7.3.2
 URL: https://github.com/nicholasdavies/inshiny, https://nicholasdavies.github.io/inshiny/
 BugReports: https://github.com/nicholasdavies/inshiny/issues
 Suggests: 
-    knitr,
-    rmarkdown,
-    testthat (>= 3.0.0)
+	knitr,
+	rmarkdown,
+	testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
-    bslib,
-    htmltools,
-    rlang,
-    shiny,
-    stringr
+	bslib,
+	htmltools,
+	rlang,
+	shiny,
+	stringr
 VignetteBuilder: knitr
