make check_tags run only in CI

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ BugReports: https://github.com/nicholasdavies/inshiny/issues
 Suggests: 
 	knitr,
 	rmarkdown,
-	testthat (>= 3.0.0)
+	testthat (>= 3.0.0),
+	withr
 Config/testthat/edition: 3
 Imports: 
 	bslib,
